# app

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/actions/python-setup/: action.yml
.github/workflows/: build.yml  check.yml  deploy.yml  tofu-apply.yml  tofu-plan.yml
data/: ebbcarbon.yaml
infra/: .terraform.lock.hcl  main.tf  providers.tf  tags.tf  variables.tf
source/app/: __init__.py
source/app/app/: main.py  tools.py
source/app/core/: __init__.py  api.py  models.py  store.py
source/app/data/: ebbcarbon.yaml
tests/test_app/: conftest.py  test_health.py  test_resources.py
tests/test_core/: test_resources.py
