[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Yani Lathouris <ylathouris@gmail.com>"]
packages = [{ include = "app", from = "source" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
mangum = "^0.17.0"
pyyaml = "^6.0.1"

[tool.poetry.group.test.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
types-pyyaml = "^6.0.12.20240311"
pytest-cov = "^5.0.0"
ruff = "^0.3.7"
bandit = "^1.7.8"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
